pre entrega lo que se llego

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     a
                     cada necesidad y expectativa.
                 </p>
-                <img class="imagenNosotros" src="../Img/cabaña-tafi.jpg" alt="">
+                <img src="./Img/cabaña-tafi.jpg" alt="">
             </div>
             </article>
             <article>
@@ -198,7 +198,7 @@
                         laboriosam
                         adipisci eum soluta quaerat nisi eveniet quia, hic praesentium sunt fuga unde saepe. Expedita
                         laboriosam animi repellat assumenda?</p>
-                    <img src="../Img/Nosotros 4.jpg" alt="">
+                    <img src="./Img/Nosotros 4.jpg" alt="">
                 </div>
             </article>
             <article>
@@ -218,7 +218,7 @@
                         Quae corrupti ratione harum ducimus atque, nostrum eius nulla consequatur voluptas consequuntur
                         dicta, dolorum expedita pariatur. Id ea, at alias et, architecto beatae impedit ab minima
                         voluptates dignissimos mollitia quibusdam?</p>
-                    <img src="../Img/Nosotros 2.jpg" alt="">
+                    <img src="./Img/Nosotros 2.jpg" alt="">
                 </div>
             </article>
         </section>
@@ -251,5 +251,4 @@
         </div>
     </footer>
 </body>
-
 </html>
