--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -32,8 +32,6 @@
             </nav>
         </header>
 
-        <hr>
-
         <section id="seccion1">
             <h2>Contactanos</h2>
             <fieldset>
@@ -43,22 +41,18 @@
                         <label for="Nombre">Nombre:</label>
                         <input id="Nombre" type="text">
                     </div>
-
                     <div>
                         <label for="Apellido">Apellido:</label>
                         <input id="Apellido" type="text">
                     </div>
-
                     <div>
                         <label for="E-mail">E-mail</label>
                         <input type="email">
                     </div>
-
                     <div>
                         <label for="Telefono">Telefono:</label>
                         <input type="number">
                     </div>
-
                     <div>
                         <label for="Observaciones">Observaciones:</label>
                         <br><br>
@@ -69,7 +63,6 @@
                         <label for="Novedades">Deseo Recibir Novedades</label>
                         <input id="Novedades" type="checkbox">
                     </div>
-
                     <div>
                         <input type="submit" value="Enviar">
                     </div>
@@ -173,14 +166,14 @@
 
         <aside>
             <div class="asideContacto">
-                <img class="asideImage" src="/Img/aside1.jpg" alt="">
-                <img class="asideImage" src="/Img/aside2.jpg" alt="">
-                <img class="asideImage" src="/Img/aside3.jpg" alt="">
-                <img class="asideImage" src="/Img/aside4.jpg" alt="">
-                <img class="asideImage" src="/Img/aside5.jpg" alt="">
-                <img class="asideImage" src="/Img/aside6.jpg" alt="">
-                <img class="asideImage" src="/Img/aside7.jpg" alt="">
-                <img class="asideImage" src="/Img/aside8.jpg" alt="">
+                <img class="asideImage" src="../Img/aside1.jpg" alt="">
+                <img class="asideImage" src="../Img/aside2.jpg" alt="">
+                <img class="asideImage" src="../Img/aside3.jpg" alt="">
+                <img class="asideImage" src="../Img/aside4.jpg" alt="">
+                <img class="asideImage" src="../Img/aside5.jpg" alt="">
+                <img class="asideImage" src="../Img/aside6.jpg" alt="">
+                <img class="asideImage" src="../Img/aside7.jpg" alt="">
+                <img class="asideImage" src="../Img/aside8.jpg" alt="">
             </div>
         </aside>
 
