--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -63,7 +63,7 @@
                 <div>
                     <hr>
                     <p>NOTA:Las imagenes son ilustrativas. Todas nuestras habitaciones tienen un decorado distinto entre
-                        si. El color o tipo de cobertor de cama puede variar al igual que la disposicion de algun
+                        si. El color o tipo de cobertor d e cama puede variar al igual que la disposicion de algun
                         mobiliario. Algunas habitaciones por su semejanza no estan dentro de las fotos publicadas.</p>
                     <hr>
                 </div>
@@ -83,7 +83,7 @@
                         Cuenta con cocina comedor con horno, anafe, microondas, heladera, vajilla básica y baño.
                         Área de dormitorio con cama matrimonial (140 x 190).
                         Terraza exterior con parrilla y sector para mesa.</p>
-                    <img src="/Img/Bungalows-1.jpg" alt="cabaña 1">
+                    <img src="../Img/Bungalows-1.jpg" alt="cabaña 1">
                     <a href="./tarifas.html"> VER PRECIOS </a>
                 </div>
             </article>
@@ -97,7 +97,7 @@
                         Terraza exterior con parrilla y sector para mesa.
                         Planta alta con dormitorio matrimonial (140 x 190) + balcón terraza.
                     </p>
-                    <img src="/Img/Bungalows-2.jpg" alt="cabaña 2">
+                    <img src="../Img/Bungalows-2.jpg" alt="cabaña 2">
                     <a href="./tarifas.html"> VER PRECIOS </a>
                 </div>
             </article>
@@ -111,7 +111,7 @@
                         En planta alta dormitorio matrimonial (140 x 190)| + 1 cama single.
                         Galeria exterior con parrilla y sector para mesa.
                     </p>
-                    <img src="/Img/Bungalows-3.jpg" alt="cabaña 3">
+                    <img src="../Img/Bungalows-3.jpg" alt="cabaña 3">
                     <a href="./tarifas.html"> VER PRECIOS </a>
                 </div>
             </article>
@@ -125,7 +125,7 @@
                         Dormitorio matrimonial (140 x 190) + una cama single.
                         Terraza exterior con parrilla y sector para mesa.
                     </p>
-                    <img src="/Img/Bungalows-4.jpg" alt="cabaña 4">
+                    <img src="../Img/Bungalows-4.jpg" alt="cabaña 4">
                     <a href="./tarifas.html"> VER PRECIOS </a>
                 </div>
             </article>
@@ -138,7 +138,7 @@
                         heladera, vajilla basica y baño.
                         En planta alta dormitorio matrimonial (140 x 190) + 1 single.
                         Terraza exterior con parrilla y sector para mesa.</p>
-                    <img src="/Img/Bungalows-5.jpg" alt="cabaña 5">
+                    <img src="../Img/Bungalows-5.jpg" alt="cabaña 5">
                     <a href="./tarifas.html"> VER PRECIOS </a>
                 </div>
             </article>
