--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -35,37 +35,37 @@
 
     <main>
         <section>
-            <div class="cointainer">
+            <div class="Habitaciones">
                 <H2>Habitaciones</H2>
                 <p>Contamos con habitaciones dobles y triples</p>
                 <hr>
             </div>
-            <article>
-                <div>
-                    <h2>SUITE MATRIMONIAL</h2>
-                    <p>Habitaciòn de 28 mts² I Cama matrimonial (140 x 190) I Baño con ducha I Jarra eléctrica I
-                        Conservadora tipo frigobar I Microondas I Vajilla basica I Parrilla disponible en el quincho.
-                        (No
-                        disponible para niños o bebes)</p>
-                    <img src="/Img/habitacion-1.jpg" alt="habitacion 1">
-                    <a href="./tarifas.html"> VER PRECIOS </a>
+            <article class="suite">
+                <div class="suiteMatrimonial">
+                    <div class="suiteInfo">
+                        <h2>SUITE MATRIMONIAL</h2>
+                        <p>Habitaciòn de 28 mts² I Cama matrimonial (140 x 190) I Baño con ducha I Jarra eléctrica I
+                            Conservadora tipo frigobar I Microondas I Vajilla basica I Parrilla disponible en el
+                            quincho.
+                            (No
+                            disponible para niños o bebes)</p>
+                        <a href="./tarifas.html"> VER PRECIOS </a>
+                    </div>
+                    <img src="../Img/habitacion-1.jpg" alt="habitacion 1">
                 </div>
-            </article>
-            <article>
                 <div>
                     <h4>SUITE MATRIMONIAL PLUS</h4>
+                    <hr>
                     <p>Habitaciòn de 38 mts² I Cama matrimonial de madera (140 x 190) + 1 cama single* I Baño con ducha
                         I Anafe I Heladera frigobar I Microondas I Vajilla basica I Parrilla disponible en el quincho.
                         *La cama single esta en las triples (disponible para niños o bebes informandolo previamente)</p>
-                    <img src="/Img/habitacion-2.jpg" alt="habitacion 2">
                     <a href="./tarifas.html"> VER PRECIOS </a>
+                    <img src="../Img/habitacion-2.jpg" alt="habitacion 2">
                 </div>
                 <div>
-                    <hr>
                     <p>NOTA:Las imagenes son ilustrativas. Todas nuestras habitaciones tienen un decorado distinto entre
                         si. El color o tipo de cobertor d e cama puede variar al igual que la disposicion de algun
                         mobiliario. Algunas habitaciones por su semejanza no estan dentro de las fotos publicadas.</p>
-                    <hr>
                 </div>
             </article>
         </section>
@@ -83,8 +83,8 @@
                         Cuenta con cocina comedor con horno, anafe, microondas, heladera, vajilla básica y baño.
                         Área de dormitorio con cama matrimonial (140 x 190).
                         Terraza exterior con parrilla y sector para mesa.</p>
-                    <img src="../Img/Bungalows-1.jpg" alt="cabaña 1">
                     <a href="./tarifas.html"> VER PRECIOS </a>
+                    <img src="../Img/Bungalows-1.jpg" alt="cabaña 1">
                 </div>
             </article>
             <article>
@@ -97,8 +97,8 @@
                         Terraza exterior con parrilla y sector para mesa.
                         Planta alta con dormitorio matrimonial (140 x 190) + balcón terraza.
                     </p>
-                    <img src="../Img/Bungalows-2.jpg" alt="cabaña 2">
                     <a href="./tarifas.html"> VER PRECIOS </a>
+                    <img src="../Img/Bungalows-2.jpg" alt="cabaña 2">
                 </div>
             </article>
             <article>
@@ -111,8 +111,8 @@
                         En planta alta dormitorio matrimonial (140 x 190)| + 1 cama single.
                         Galeria exterior con parrilla y sector para mesa.
                     </p>
-                    <img src="../Img/Bungalows-3.jpg" alt="cabaña 3">
                     <a href="./tarifas.html"> VER PRECIOS </a>
+                    <img src="../Img/Bungalows-3.jpg" alt="cabaña 3">
                 </div>
             </article>
             <article>
@@ -125,8 +125,8 @@
                         Dormitorio matrimonial (140 x 190) + una cama single.
                         Terraza exterior con parrilla y sector para mesa.
                     </p>
-                    <img src="../Img/Bungalows-4.jpg" alt="cabaña 4">
                     <a href="./tarifas.html"> VER PRECIOS </a>
+                    <img src="../Img/Bungalows-4.jpg" alt="cabaña 4">
                 </div>
             </article>
             <article>
@@ -138,13 +138,13 @@
                         heladera, vajilla basica y baño.
                         En planta alta dormitorio matrimonial (140 x 190) + 1 single.
                         Terraza exterior con parrilla y sector para mesa.</p>
-                    <img src="../Img/Bungalows-5.jpg" alt="cabaña 5">
                     <a href="./tarifas.html"> VER PRECIOS </a>
+                    <img src="../Img/Bungalows-5.jpg" alt="cabaña 5">
                 </div>
             </article>
             <article>
                 <div>
-                        <h3>SERVICIOS</h3>
+                    <h3>SERVICIOS</h3>
                 </div>
                 <div>
                     <div>
@@ -190,7 +190,6 @@
             <p>Telefono: (223)155-555555</p>
             <p>E-mail: mipagina@gmail.com</p>
         </div>
-
         <div class="footer__info">
             <h4>Seguinos</h4>
             <nav>
