--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -36,14 +36,14 @@
     <main>
         <section>
             <div class="Habitaciones">
-                <H2>Habitaciones</H2>
+                <h2>Habitaciones</h2>
                 <p>Contamos con habitaciones dobles y triples</p>
                 <hr>
             </div>
             <article class="suite">
                 <div class="suiteMatrimonial">
                     <div class="suiteInfo">
-                        <h2>SUITE MATRIMONIAL</h2>
+                        <h4>SUITE MATRIMONIAL</h4>
                         <p>Habitaciòn de 28 mts² I Cama matrimonial (140 x 190) I Baño con ducha I Jarra eléctrica I
                             Conservadora tipo frigobar I Microondas I Vajilla basica I Parrilla disponible en el
                             quincho.
@@ -53,16 +53,20 @@
                     </div>
                     <img src="../Img/habitacion-1.jpg" alt="habitacion 1">
                 </div>
-                <div>
-                    <h4>SUITE MATRIMONIAL PLUS</h4>
-                    <hr>
-                    <p>Habitaciòn de 38 mts² I Cama matrimonial de madera (140 x 190) + 1 cama single* I Baño con ducha
-                        I Anafe I Heladera frigobar I Microondas I Vajilla basica I Parrilla disponible en el quincho.
-                        *La cama single esta en las triples (disponible para niños o bebes informandolo previamente)</p>
-                    <a href="./tarifas.html"> VER PRECIOS </a>
+                <div class="suiteMatrimonial">
+                    <div class="suiteInfo">
+                        <h4>SUITE MATRIMONIAL PLUS</h4>
+                        <p>Habitaciòn de 38 mts² I Cama matrimonial de madera (140 x 190) + 1 cama single* I Baño con
+                            ducha
+                            I Anafe I Heladera frigobar I Microondas I Vajilla basica I Parrilla disponible en el
+                            quincho.
+                            *La cama single esta en las triples (disponible para niños o bebes informandolo previamente)
+                        </p>
+                        <a href="./tarifas.html"> VER PRECIOS </a>
+                    </div>
                     <img src="../Img/habitacion-2.jpg" alt="habitacion 2">
                 </div>
-                <div>
+                <div class="NOTA">
                     <p>NOTA:Las imagenes son ilustrativas. Todas nuestras habitaciones tienen un decorado distinto entre
                         si. El color o tipo de cobertor d e cama puede variar al igual que la disposicion de algun
                         mobiliario. Algunas habitaciones por su semejanza no estan dentro de las fotos publicadas.</p>
@@ -70,87 +74,99 @@
             </article>
         </section>
         <section>
-            <div>
+            <div class="Habitaciones">
                 <h2>Bungalows</h2>
-                <span>Bungalows familiares de 3 a 5 personas</span>
+                <p>Bungalows familiares de 3 a 5 personas</p>
                 <hr>
             </div>
-            <article>
-                <div>
-                    <h4>PANORAMA</h4>
-                    <p>CAPACIDAD 2 PERSONAS (matrimonial)
-                        Bungalow monoambiente.
-                        Cuenta con cocina comedor con horno, anafe, microondas, heladera, vajilla básica y baño.
-                        Área de dormitorio con cama matrimonial (140 x 190).
-                        Terraza exterior con parrilla y sector para mesa.</p>
-                    <a href="./tarifas.html"> VER PRECIOS </a>
+            <article class="suite">
+                <div class="suiteMatrimonial">
+                    <div class="suiteInfo">
+                        <h4>PANORAMA</h4>
+                        <p>CAPACIDAD 2 PERSONAS (matrimonial)
+                            Bungalow monoambiente.
+                            Cuenta con cocina comedor con horno, anafe, microondas, heladera, vajilla básica y baño.
+                            Área de dormitorio con cama matrimonial (140 x 190).
+                            Terraza exterior con parrilla y sector para mesa.</p>
+                        <a href="./tarifas.html"> VER PRECIOS </a>
+                    </div>
                     <img src="../Img/Bungalows-1.jpg" alt="cabaña 1">
                 </div>
             </article>
-            <article>
-                <div>
-                    <h4>BELVEDERE</h4>
-                    <p>CAPACIDAD 3 PERSONAS (matrimonial + 1)
-                        Bungalow de dos pisos.
-                        Planta baja con area de living comedor con un diván cama, cocina con horno, anafe, microondas,
-                        heladera, vajilla basica y baño.
-                        Terraza exterior con parrilla y sector para mesa.
-                        Planta alta con dormitorio matrimonial (140 x 190) + balcón terraza.
-                    </p>
-                    <a href="./tarifas.html"> VER PRECIOS </a>
+            <article class="suite">
+                <div class="suiteMatrimonial">
+                    <div class="suiteInfo">
+                        <h4>BELVEDERE</h4>
+                        <p>CAPACIDAD 3 PERSONAS (matrimonial + 1)
+                            Bungalow de dos pisos.
+                            Planta baja con area de living comedor con un diván cama, cocina con horno, anafe,
+                            microondas,
+                            heladera, vajilla basica y baño.
+                            Terraza exterior con parrilla y sector para mesa.
+                            Planta alta con dormitorio matrimonial (140 x 190) + balcón terraza.
+                        </p>
+                        <a href="./tarifas.html"> VER PRECIOS </a>
+                    </div>
                     <img src="../Img/Bungalows-2.jpg" alt="cabaña 2">
                 </div>
             </article>
-            <article>
-                <div>
-                    <h4>ARMONIA</h4>
-                    <p>CAPACIDAD 5 PERSONAS (matrimonial + 3)
-                        Bungalow en dos plantas.
-                        En planta baja Area de living comedor con dos diván cama, cocina con horno, anafe, microondas,
-                        heladera, vajilla basica y baño.
-                        En planta alta dormitorio matrimonial (140 x 190)| + 1 cama single.
-                        Galeria exterior con parrilla y sector para mesa.
-                    </p>
-                    <a href="./tarifas.html"> VER PRECIOS </a>
+            <article class="suite">
+                <div class="suiteMatrimonial">
+                    <div class="suiteInfo">
+                        <h4>ARMONIA</h4>
+                        <p>CAPACIDAD 5 PERSONAS (matrimonial + 3)
+                            Bungalow en dos plantas.
+                            En planta baja Area de living comedor con dos diván cama, cocina con horno, anafe,
+                            microondas,
+                            heladera, vajilla basica y baño.
+                            En planta alta dormitorio matrimonial (140 x 190)| + 1 cama single.
+                            Galeria exterior con parrilla y sector para mesa.
+                        </p>
+                        <a href="./tarifas.html"> VER PRECIOS </a>
+                    </div>
                     <img src="../Img/Bungalows-3.jpg" alt="cabaña 3">
                 </div>
             </article>
-            <article>
-                <div>
-                    <h4>HORIZONTE</h4>
-                    <p>CAPACIDAD 4 PERSONAS (matrimonial + 2)
-                        Bungalow en una planta.
-                        Area de living comedor con un diván cama, cocina con horno, anafe, microondas, heladera, vajilla
-                        basica y baño.
-                        Dormitorio matrimonial (140 x 190) + una cama single.
-                        Terraza exterior con parrilla y sector para mesa.
-                    </p>
-                    <a href="./tarifas.html"> VER PRECIOS </a>
+            <article class="suite">
+                <div class="suiteMatrimonial">
+                    <div class="suiteInfo">
+                        <h4>HORIZONTE</h4>
+                        <p>CAPACIDAD 4 PERSONAS (matrimonial + 2)
+                            Bungalow en una planta.
+                            Area de living comedor con un diván cama, cocina con horno, anafe, microondas, heladera,
+                            vajilla
+                            basica y baño.
+                            Dormitorio matrimonial (140 x 190) + una cama single.
+                            Terraza exterior con parrilla y sector para mesa.
+                        </p>
+                        <a href="./tarifas.html"> VER PRECIOS </a>
+                    </div>
                     <img src="../Img/Bungalows-4.jpg" alt="cabaña 4">
                 </div>
             </article>
-            <article>
-                <div>
-                    <h4>ATARDECER</h4>
-                    <p>CAPACIDAD 5 PERSONAS (matrimonial + 3)
-                        Bungalow en dos plantas.
-                        En planta baja Area de living comedor con dos diván cama, cocina con horno, anafe, microondas,
-                        heladera, vajilla basica y baño.
-                        En planta alta dormitorio matrimonial (140 x 190) + 1 single.
-                        Terraza exterior con parrilla y sector para mesa.</p>
-                    <a href="./tarifas.html"> VER PRECIOS </a>
-                    <img src="../Img/Bungalows-5.jpg" alt="cabaña 5">
+            <article class="suite">
+                <div class="suiteMatrimonial">
+                    <div class="suiteInfo">
+                        <h4>ATARDECER</h4>
+                        <p>CAPACIDAD 5 PERSONAS (matrimonial + 3)
+                            Bungalow en dos plantas.
+                            En planta baja Area de living comedor con dos diván cama, cocina con horno, anafe,
+                            microondas,
+                            heladera, vajilla basica y baño.
+                            En planta alta dormitorio matrimonial (140 x 190) + 1 single.
+                            Terraza exterior con parrilla y sector para mesa.</p>
+                        <a href="./tarifas.html"> VER PRECIOS </a>
+                    </div>
+                    <img class="atardecer" src="../Img/Bungalows-5.jpg" alt="cabaña 5">
                 </div>
             </article>
             <article>
-                <div>
+                <div class="tituloServicio">
                     <h3>SERVICIOS</h3>
                 </div>
-                <div>
-                    <div>
+                <div class="servicios">
+                    <div class="serviciosIncluidos">
                         <h4>SERVICIOS INCLUIDOS</h4>
-                    </div>
-                    <div>
                         <ul>- Estacionamiento cubierto y zona de parking (sujeto a disponibilidad)</ul>
                         <ul>- Asadores</ul>
                         <ul>- Piscina de temporada de verano</ul>
@@ -161,10 +177,8 @@
                         <ul>- Desayuno modalidad seco (opcional)</ul>
                         <ul>- Ubicados en zona residencial muy tranquila a 3 cuadras de la Av. principal</ul>
                     </div>
-                    <div>
+                    <div class="serviciosIncluidos">
                         <h4>VENTAJAS</h4>
-                    </div>
-                    <div>
                         <p>Al hospedarse en cabañas Moxy usted dispone:</p>
                         <li>Habitaciones espaciosas</li>
                         <li>Mesa para area de trabajo o tipo living-comerdor</li>
@@ -180,9 +194,7 @@
 
         </section>
     </main>
-
     <hr>
-
     <footer class="footer">
         <div class="footer__info">
             <h4>Informacion de contacto</h4>
