responsive en index y habitaciones, grid en contacto

--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -167,15 +167,15 @@
                 <div class="servicios">
                     <div class="serviciosIncluidos">
                         <h4>SERVICIOS INCLUIDOS</h4>
-                        <ul>- Estacionamiento cubierto y zona de parking (sujeto a disponibilidad)</ul>
-                        <ul>- Asadores</ul>
-                        <ul>- Piscina de temporada de verano</ul>
-                        <ul>- 9.000 mts de parque arbolado con sobra y tranquilidad</ul>
-                        <ul>- Acceso a Wifi</ul>
-                        <ul>- Calefaccion/ ventilador / aire acondicionado</ul>
-                        <ul>- Servicio de Mucama</ul>
-                        <ul>- Desayuno modalidad seco (opcional)</ul>
-                        <ul>- Ubicados en zona residencial muy tranquila a 3 cuadras de la Av. principal</ul>
+                        <li>Estacionamiento cubierto y zona de parking (sujeto a disponibilidad)</li>
+                        <li>Asadores</li>
+                        <li>Piscina de temporada de verano</li>
+                        <li>9.000 mts de parque arbolado con sobra y tranquilidad</li>
+                        <li>Acceso a Wifi</li>
+                        <li>Calefaccion/ ventilador / aire acondicionado</li>
+                        <li>Servicio de Mucama</li>
+                        <li>Desayuno modalidad seco (opcional)</li>
+                        <li>Ubicados en zona residencial muy tranquila a 3 cuadras de la Av. principal</li>
                     </div>
                     <div class="serviciosIncluidos">
                         <h4>VENTAJAS</h4>
